--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,14 +1,8 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
-<loading ></loading>
+<scroll-view>
+  <!--放头图-->
+  <view></view>
+  <i-cell-group wx:for="{{componentsList}}" wx:key="key">
+    <i-cell title="{{item.name}}" is-link bind:click="navigateToShowComponents" data-name="{{item.name}}"></i-cell>
+  </i-cell-group>
+</scroll-view>
