--- a/components/tip/tip.wxml
+++ b/components/tip/tip.wxml
@@ -1,7 +1,7 @@
 <!--components/tip/tip.wxml-->
 <view class="components-voteTip" wx:if="{{showModal}}" style="background-color:{{tip.voteTipTotalBackgroundColor}}">
-    <view class="components-voteTip-title" style="color:{{tip.voteTipTitleColor}}">{{tip.voteTipTitleText}}</view>
-    <view class="components-voteTip-content" style="color:{{tip.voteTipContentColor}}">{{tip.voteTipContentText}}</view>
+    <view class="components-voteTip-title" style="color:{{tip.voteTipTitleColor}}">{{tipTitle}}</view>
+    <view class="components-voteTip-content" style="color:{{tip.voteTipContentColor}}">{{tipContent}}</view>
     <button class="components-voteTip-button" style="color:{{tip.voteTipButtonTextColor}};background-color:{{tip.voteTipButtonBackgroundColor}}" bindtap="confirm">{{tip.voteTipButtonText}}</button>
 </view>
 <view class="shadow" wx:if="{{showModal}}"></view>
